[gd_scene load_steps=16 format=2]

[ext_resource path="res://art assets/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/scripts/level_select_.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[node name="level_select_" type="Control" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.012
margin_top = 6.82843
margin_bottom = -0.0836182
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 316.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Level 1"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 150.0
margin_right = 316.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer2"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Level 2"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 260.0
margin_right = 316.0
margin_bottom = 354.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer3"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Level 3"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 370.0
margin_right = 316.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer4"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Level 4"

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
margin_left = 373.0
margin_top = 40.0
margin_right = 649.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer5"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Level 5"

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
margin_left = 699.0
margin_top = 40.0
margin_right = 975.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="VBoxContainer6"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Level 9"

[node name="VBoxContainer7" type="VBoxContainer" parent="."]
margin_left = 373.0
margin_top = 150.0
margin_right = 649.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="VBoxContainer7"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Level 6"

[node name="VBoxContainer8" type="VBoxContainer" parent="."]
margin_left = 373.0
margin_top = 260.0
margin_right = 649.0
margin_bottom = 354.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="VBoxContainer8"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Level 7"

[node name="VBoxContainer9" type="VBoxContainer" parent="."]
margin_left = 373.0
margin_top = 370.0
margin_right = 649.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="VBoxContainer9"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "Level 8"

[node name="VBoxContainer10" type="VBoxContainer" parent="."]
margin_left = 699.0
margin_top = 150.0
margin_right = 975.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="VBoxContainer10"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "Level 10"

[node name="VBoxContainer11" type="VBoxContainer" parent="."]
margin_left = 699.0
margin_top = 260.0
margin_right = 975.0
margin_bottom = 354.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="Button" parent="VBoxContainer11"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
text = "Level 11"

[node name="VBoxContainer12" type="VBoxContainer" parent="."]
margin_left = 699.0
margin_top = 370.0
margin_right = 975.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button12" type="Button" parent="VBoxContainer12"]
margin_right = 276.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
text = "Level 12"

[node name="VBoxContainer13" type="VBoxContainer" parent="."]
margin_left = 859.0
margin_top = 504.0
margin_right = 975.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer13"]
margin_right = 116.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 13 )
text = "Return"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer5/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer6/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="VBoxContainer7/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer8/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer9/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="VBoxContainer10/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="VBoxContainer11/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="VBoxContainer12/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="VBoxContainer13/BackButton" to="." method="_on_BackButton_pressed"]
